@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: wm.n,v 1.11.2.4 2006/04/11 07:36:40 das Exp $
+'\" RCS: @(#) $Id: wm.n,v 1.11.2.5 2006/12/01 19:47:41 hobbs Exp $
 '\" 
 .so man.macros
 .TH wm n 8.4 Tk "Tk Built-In Commands"
@@ -51,34 +51,58 @@ returned).
 \fBwm attributes \fIwindow\fR ?\fBoption\fR?
 .TP
 \fBwm attributes \fIwindow\fR ?\fBoption value option value...\fR?
-.RS
 This subcommand returns or sets platform specific attributes associated
 with a window. The first form returns a list of the platform specific
 flags and their values. The second form returns the value for the
 specific option. The third form sets one or more of the values. The
 values are as follows:
 .PP
-On Windows, \fB\-disabled\fR gets or sets whether the window is in a
-disabled state. \fB\-toolwindow\fR gets or sets the style of the window
-to toolwindow (as defined in the MSDN). \fB\-topmost\fR gets or sets
-whether this is a topmost window (displays above all other windows).
-\fB\-alpha\fR sets the alpha transparency level of the toplevel.  It accepts
-a value from \fB0.0\fR (fully transparent) to \fB1.0\fR (opaque).  Values
-outside that range will be constrained.  This is supported on Windows
-2000/XP+.  Where not supported, the \fB\-alpha\fR value remains at
-\fB1.0\fR.
-.PP
-On Mac OS X, \fB\-modified\fR gets or sets the modification state of the
-window (determines whether the window close widget contains the modification
-indicator and whether the proxy icon is draggable).
-\fB\-titlepath\fR gets or sets the path of the file referenced as
-the window proxy icon (which can be dragged and dropped in lieu of the file's
-finder icon). \fB\-alpha\fR sets the alpha transparency level of the window,
-it accepts a value from \fB0.0\fR (fully transparent) to \fB1.0\fR (opaque),
-values outside that range will be constrained.
-.PP
-On Unix, there are currently no special attribute values.
+On Windows, the following attributes may be set.
+.RS
+.TP
+\fB\-disabled\fR
+Specifies whether the window is in a disabled state.
+.TP
+\fB\-toolwindow\fR
+Specifies a toolwindow style window (as defined in the MSDN).
+.TP
+\fB\-topmost\fR
+Specifies whether this is a topmost window (displays above all other windows).
+.TP
+\fB\-alpha\fR
+Specifies the alpha transparency level of the toplevel.
+It accepts a value from \fB0.0\fR (fully transparent) to \fB1.0\fR
+(opaque).  Values outside that range will be constrained.  This is
+supported on Windows 2000/XP+.  Where not supported, the \fB\-alpha\fR
+value remains at \fB1.0\fR.
+.TP
+\fB\-transparentcolor\fR
+Specifies the transparent color index of the toplevel.  It takes any color
+value accepted by \fBTk_GetColor\fR.  If the empty string is specified
+(default), no transparent color is used.  This is supported on Windows
+2000/XP+.  Where not supported, the \fB\-transparentcolor\fR value remains
+at \fB{}\fR.
 .RE
+.PP
+On Mac OS X, the following attributes may be set.
+.RS
+.TP
+\fB\-modified\fR
+Specifies the modification state of the window (determines whether the
+window close widget contains the modification indicator and whether the
+proxy icon is draggable).
+.TP
+\fB\-titlepath\fR
+Specifies the path of the file referenced as the window proxy icon (which
+can be dragged and dropped in lieu of the file's finder icon).
+.TP
+\fB\-alpha\fR
+Specifies the alpha transparency level of the window.
+It accepts a value from \fB0.0\fR (fully transparent) to \fB1.0\fR (opaque),
+values outside that range will be constrained.
+.RE
+.PP
+On X11, there are currently no special attribute values.
 .VE 8.4
 .TP
 \fBwm client \fIwindow\fR ?\fIname\fR?
